bk_ida/gccida/g2/init_branch_prob
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_branch_prob/src/profile.c:1450:1: error: use of undeclared identifier 'profiler_label'
profiler_label = gen_rtx_fmt_s( SYMBOL_REF, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v8); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_branch_prob/src/profile.c:1450:47: error: use of undeclared identifier 'machine_mode'
profiler_label = gen_rtx_fmt_s( SYMBOL_REF, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v8); 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_branch_prob/src/profile.c:1451:20: error: use of undeclared identifier 'profiler_label'
ggc_add_rtx_root( &profiler_label, 1); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_branch_prob/src/profile.c:1467:12: error: expected expression
*( _OWORD *)total_hist_br_prob = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_branch_prob/src/profile.c:1467:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)total_hist_br_prob = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_branch_prob/src/profile.c:1468:12: error: expected expression
*( _OWORD *)&total_hist_br_prob[4] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_branch_prob/src/profile.c:1468:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&total_hist_br_prob[4] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_branch_prob/src/profile.c:1469:12: error: expected expression
*( _OWORD *)&total_hist_br_prob[8] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_branch_prob/src/profile.c:1469:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&total_hist_br_prob[8] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_branch_prob/src/profile.c:1470:12: error: expected expression
*( _OWORD *)&total_hist_br_prob[12] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_branch_prob/src/profile.c:1470:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&total_hist_br_prob[12] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_branch_prob/src/profile.c:1471:12: error: expected expression
*( _OWORD *)&total_hist_br_prob[16] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_branch_prob/src/profile.c:1471:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&total_hist_br_prob[16] = 0LL; 
   ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_branch_prob/src/obj/profile.o] Error 1
